--- a/book.toml
+++ b/book.toml
@@ -1,7 +1,7 @@
 [book]
-authors = ["Michael Currin"]
+authors = ["Cittadhammo Bhikkhu"]
 language = "en"
 multilingual = false
 src = "src"
-title = "mdBook Quickstart"
-description = "Demo site for mdBook Quickstart repo"
+title = "Simple Pali Chanting Guide & Exercises"
+description = "Learn how to read and chant Pali"
